--- a/Api/package.json
+++ b/Api/package.json
@@ -16,8 +16,10 @@
   "author": "Ahmed Semih Erkan",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
